--- a/styles.css
+++ b/styles.css
@@ -2,44 +2,6 @@ html {
     overflow-x: hidden;
 }
 
-/* Fonts */
-:root {
-    --default-font: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --heading-font: "Montserrat", sans-serif;
-    --nav-font: "Lato", sans-serif;
-  }
-  
-  /* Global Colors */
-  :root {
-    --background-color: #ffffff;
-    --background-color-rgb: 255, 255, 255;
-    --default-color: #212529;
-    --default-color-rgb: 33, 37, 41;
-    --accent-color: #e84545;
-    --accent-color-rgb: 232, 69, 69;
-    --heading-color: #32353a;
-    --heading-color-rgb: 50, 53, 58;
-    --contrast-color: #ffffff;
-    --contrast-color-rgb: 255, 255, 255;
-  }
-  
-  /* Nav Menu Colors */
-  :root {
-    --nav-color: #3a3939;
-    --nav-hover-color: #e84545;
-    --nav-dropdown-color: #3a3939;
-    --nav-dropdown-hover-color: #e84545;
-    --nav-dropdown-background-color: #ffffff;
-  }
-  
-  /* Smooth scroll */
-  :root {
-    scroll-behavior: smooth;
-  }
-  
-  /*--------------------------------------------------------------
-  # General ------------------------------------------------------*/
-
 .slides {
     display: grid;
     grid-auto-flow: column;
@@ -70,14 +32,14 @@ html {
 
 }
 
+.btn-white {
+    background-color: white;
+}
+
 .card-body {
     background-color: #FC0404;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-}
-
-.btn-white {
-    background-color: white;
 }
 
 .card {
@@ -98,6 +60,31 @@ html {
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;} */
+
+/* --------------- Main CSS ---------------- */
+
+/* Global Colors */
+:root {
+  --background-color: #ffffff;
+  --background-color-rgb: 255, 255, 255;
+  --default-color: #212529;
+  --default-color-rgb: 33, 37, 41;
+  --accent-color: #e84545;
+  --accent-color-rgb: 232, 69, 69;
+  --heading-color: #32353a;
+  --heading-color-rgb: 50, 53, 58;
+  --contrast-color: #ffffff;
+  --contrast-color-rgb: 255, 255, 255;
+}
+
+/* Nav Menu Colors */
+:root {
+  --nav-color: #3a3939;
+  --nav-hover-color: #e84545;
+  --nav-dropdown-color: #3a3939;
+  --nav-dropdown-hover-color: #e84545;
+  --nav-dropdown-background-color: #ffffff;
+}
 
 @media only screen and (max-width: 768px) {
     .btn-white {
